@@ -245,6 +245,9 @@ ILboolean ilIsValidFitsL(const void *Lump, ILuint Size);
 ILboolean ilLoadFits(ILconst_string FileName);
 ILboolean ilLoadFitsF(ILHANDLE File);
 ILboolean ilLoadFitsL(const void *Lump, ILuint Size);
+ILboolean ilLoadFtx(ILconst_string FileName);
+ILboolean ilLoadFtxF(ILHANDLE File);
+ILboolean ilLoadFtxL(const void *Lump, ILuint Size);
 ILboolean ilIsValidGif(ILconst_string FileName);
 ILboolean ilIsValidGifF(ILHANDLE File);
 ILboolean ilIsValidGifL(const void *Lump, ILuint Size);
